syntax = "proto3";

package twitter_clone;

service User{
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}

service Tweet{

}


message LoginUserRequest{
  string email = 1;
  string password = 2;
}

message LoginUserResponse{
  bool success = 1;
}


message RegisterUserRequest{
  string email = 1;
  string password = 2;
}

message RegisterUserResponse{
  bool success = 1;
}